# xema

./: .anjuta_sym_db.db  Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
man/: Makefile.am  Makefile.in  xema.1
src/: Makefile.am  Makefile.in  base64.c  base64.h  main.c  utils.c  utils.h  xema.c  xema.h  xema_defs.h
